# Kedy

./: .gitignore  CMakeLists.txt  README.md
Demo/: CMakeLists.txt  Demo.txt  main.cpp
Kedy/: CMakeLists.txt
Kedy/src/: Kedy.h
Kedy/src/Core/: Cursor.cpp  Cursor.h  Piece.h  PieceTable.cpp  PieceTable.h  Selection.cpp  Selection.h  TextEditor.cpp  TextEditor.h
Scripts/: BuildSolution.bat  CreateSolution.bat
